--- a/deb/openmediavault/usr/share/openmediavault/locale/cs_CZ/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/cs_CZ/openmediavault.po
@@ -9,9 +9,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-08-11 22:31+0200\n"
-"PO-Revision-Date: 2015-11-20 16:15+0000\n"
-"Last-Translator: Pavel Borecki <pavel.borecki@gmail.com>\n"
+"POT-Creation-Date: 2016-01-07 22:30+0100\n"
+"PO-Revision-Date: 2016-01-07 21:30+0000\n"
+"Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: Czech (Czech Republic) (http://www.transifex.com/votdev/openmediavault/language/cs_CZ/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2996,8 +2996,10 @@ msgstr "Nastavit práva v cíli stejně jako na zdroji"
 msgid "Set write only"
 msgstr "Povolit pouze pro zápis"
 
-msgid "Sets the interval between disk checks to N seconds."
-msgstr "Stav disků zkontrolovat každých N sekund."
+msgid ""
+"Sets the interval between disk checks to N seconds, logging S.M.A.R.T. "
+"errors and changes of S.M.A.R.T. attributes."
+msgstr ""
 
 msgid "Settings"
 msgstr "Nastavení"
@@ -3507,12 +3509,14 @@ msgid "This field should be a list of domain names or IP addresses"
 msgstr "Toto pole by mělo obsahovat seznam doménových názvů nebo IP adres"
 
 msgid ""
-"This field should be a list of domain names or IP addresses seperated by <,>"
+"This field should be a list of domain names or IP addresses separated by <,>"
 " or <;>"
-msgstr "Toto pole by mělo obsahovat seznam doménových názvů nebo IP adres, oddělených <,> nebo <;>"
+msgstr ""
 
-msgid "This field should be a list of host names or IP addresses"
-msgstr "Toto pole by mělo obsahovat seznam názvů strojů nebo jejich IP adres"
+msgid ""
+"This field should be a list of host names or IP addresses separated by <,> "
+"or <;>"
+msgstr ""
 
 msgid ""
 "This field should be a netmask within the range 128.0.0.0 - 255.255.255.252"
@@ -3549,15 +3553,15 @@ msgstr "Toto pole by mělo obsahovat buď síťovou adresu IPv6 (s /maska), rozs
 msgid "This field should only contain numbers"
 msgstr "Toto pole by mělo obsahovat pouze čísla"
 
-msgid "This field should only contain numbers seperated by <,> or <;>"
-msgstr "Toto pole by mělo obsahovat pouze číslice oddělené znaky <,> nebo <;>"
+msgid "This field should only contain numbers separated by <,> or <;>"
+msgstr ""
 
 msgid ""
-"This field should only contain ports (0 - 65535) seperated by <,> or <;>"
-msgstr "Toto pole by mělo obsahovat pouze čísla portů (0 - 65535) oddělená znaky <,> or <;>"
+"This field should only contain ports (0 - 65535) separated by <,> or <;>"
+msgstr ""
 
-msgid "This field should only contain strings seperated by <,> or <;>"
-msgstr "Toto pole by mělo obsahovat pouze textové řetězce oddělené znaky <,> nebo <;>"
+msgid "This field should only contain strings separated by <,> or <;>"
+msgstr ""
 
 msgid "This function is effective only if the hard drive supports it."
 msgstr "Tato funkce je k něčemu jen v případě, že ji pevný disk umí."
