--- a/deb/openmediavault/usr/share/openmediavault/locale/fr_FR/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/fr_FR/openmediavault.po
@@ -13,8 +13,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-08-11 22:31+0200\n"
-"PO-Revision-Date: 2015-07-20 19:19+0000\n"
+"POT-Creation-Date: 2016-01-07 22:30+0100\n"
+"PO-Revision-Date: 2016-01-07 21:30+0000\n"
 "Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: French (France) (http://www.transifex.com/votdev/openmediavault/language/fr_FR/)\n"
 "MIME-Version: 1.0\n"
@@ -3000,8 +3000,10 @@ msgstr "Définir les autorisations de destination à l'identique de celles de la
 msgid "Set write only"
 msgstr "Définir en écriture seule"
 
-msgid "Sets the interval between disk checks to N seconds."
-msgstr "Définir l'intervalle de temps (en secondes) entre chaque contrôle."
+msgid ""
+"Sets the interval between disk checks to N seconds, logging S.M.A.R.T. "
+"errors and changes of S.M.A.R.T. attributes."
+msgstr ""
 
 msgid "Settings"
 msgstr "Paramètres"
@@ -3511,12 +3513,14 @@ msgid "This field should be a list of domain names or IP addresses"
 msgstr "Ce champ doit contenir une liste de noms de domaine ou d'adresses IP"
 
 msgid ""
-"This field should be a list of domain names or IP addresses seperated by <,>"
+"This field should be a list of domain names or IP addresses separated by <,>"
 " or <;>"
-msgstr "Ce champ doit contenir une liste de noms de domaines ou d'adresses IP séparés par <,> ou <;>"
+msgstr ""
 
-msgid "This field should be a list of host names or IP addresses"
-msgstr "Ce champ doit contenir une liste de noms d'hôtes ou d'adresses IP"
+msgid ""
+"This field should be a list of host names or IP addresses separated by <,> "
+"or <;>"
+msgstr ""
 
 msgid ""
 "This field should be a netmask within the range 128.0.0.0 - 255.255.255.252"
@@ -3553,15 +3557,15 @@ msgstr "Ce champ doit être une adresse réseau IPv6 (avec /masque), une plage I
 msgid "This field should only contain numbers"
 msgstr "Ce champ ne doit contenir que des chiffres"
 
-msgid "This field should only contain numbers seperated by <,> or <;>"
-msgstr "Ce champ ne doit contenir que des chiffres séparés par <,> ou <;>"
+msgid "This field should only contain numbers separated by <,> or <;>"
+msgstr ""
 
 msgid ""
-"This field should only contain ports (0 - 65535) seperated by <,> or <;>"
-msgstr "Ce champ ne doit contenir que des ports (0 - 65535) séparés par des <,> ou <,>"
+"This field should only contain ports (0 - 65535) separated by <,> or <;>"
+msgstr ""
 
-msgid "This field should only contain strings seperated by <,> or <;>"
-msgstr "Ce champ ne doit contenir que des chaînes séparées par des <,> ou <,>"
+msgid "This field should only contain strings separated by <,> or <;>"
+msgstr ""
 
 msgid "This function is effective only if the hard drive supports it."
 msgstr "Cette fonction n'est effective que si le disque dur la supporte."
