--- a/deb/openmediavault/usr/share/openmediavault/locale/gl/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/gl/openmediavault.po
@@ -11,8 +11,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-08-11 22:31+0200\n"
-"PO-Revision-Date: 2015-07-20 19:19+0000\n"
+"POT-Creation-Date: 2016-01-07 22:30+0100\n"
+"PO-Revision-Date: 2016-01-07 21:30+0000\n"
 "Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: Galician (http://www.transifex.com/votdev/openmediavault/language/gl/)\n"
 "MIME-Version: 1.0\n"
@@ -2998,8 +2998,10 @@ msgstr "Configurar os permisos de destino para sexan os mesmos que os permisos d
 msgid "Set write only"
 msgstr "Estabelecer só para escritura"
 
-msgid "Sets the interval between disk checks to N seconds."
-msgstr "Estabelece o intervalo entre os controles de disco a N segundos"
+msgid ""
+"Sets the interval between disk checks to N seconds, logging S.M.A.R.T. "
+"errors and changes of S.M.A.R.T. attributes."
+msgstr ""
 
 msgid "Settings"
 msgstr "Axustes"
@@ -3509,12 +3511,14 @@ msgid "This field should be a list of domain names or IP addresses"
 msgstr "Este campo debe ser unha lista de nomes de dominio ou enderezos IP"
 
 msgid ""
-"This field should be a list of domain names or IP addresses seperated by <,>"
+"This field should be a list of domain names or IP addresses separated by <,>"
 " or <;>"
-msgstr "Este campo debe ser unha lista de nomes de dominio ou enderezos IP separados por «,» ou «;»"
+msgstr ""
 
-msgid "This field should be a list of host names or IP addresses"
-msgstr "Este campo debe ser unha lista de nomes de máquina ou enderezos IP"
+msgid ""
+"This field should be a list of host names or IP addresses separated by <,> "
+"or <;>"
+msgstr ""
 
 msgid ""
 "This field should be a netmask within the range 128.0.0.0 - 255.255.255.252"
@@ -3551,15 +3555,15 @@ msgstr "Este campo debe ser un enderezo de rede IPv6 (con /máscara), un interva
 msgid "This field should only contain numbers"
 msgstr "Este campo só debe conter números"
 
-msgid "This field should only contain numbers seperated by <,> or <;>"
-msgstr "Este campo só debe conter números separados por <,> ou <;>"
+msgid "This field should only contain numbers separated by <,> or <;>"
+msgstr ""
 
 msgid ""
-"This field should only contain ports (0 - 65535) seperated by <,> or <;>"
-msgstr "Este campo só debe conter portos (0 -65535) separados por <,> ou <;>"
+"This field should only contain ports (0 - 65535) separated by <,> or <;>"
+msgstr ""
 
-msgid "This field should only contain strings seperated by <,> or <;>"
-msgstr "Este campo só debe conter cadeas separadas por <,> ou <;>"
+msgid "This field should only contain strings separated by <,> or <;>"
+msgstr ""
 
 msgid "This function is effective only if the hard drive supports it."
 msgstr "Esta función só é efectiva se o disco ríxido a admite."
