--- a/deb/openmediavault/usr/share/openmediavault/locale/hu_HU/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/hu_HU/openmediavault.po
@@ -9,9 +9,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-08-11 22:31+0200\n"
-"PO-Revision-Date: 2015-12-30 14:28+0000\n"
-"Last-Translator: Grawens <szabolcs.szanyi@gmail.com>\n"
+"POT-Creation-Date: 2016-01-07 22:30+0100\n"
+"PO-Revision-Date: 2016-01-07 21:30+0000\n"
+"Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: Hungarian (Hungary) (http://www.transifex.com/votdev/openmediavault/language/hu_HU/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2996,8 +2996,10 @@ msgstr "Célállomás jogosultságai egyezzenek meg a forrás jogosultságaival.
 msgid "Set write only"
 msgstr "Beállítás csak írhatónak"
 
-msgid "Sets the interval between disk checks to N seconds."
-msgstr "Lemez ellenőrzések közti N másodperces intervallum beállítása."
+msgid ""
+"Sets the interval between disk checks to N seconds, logging S.M.A.R.T. "
+"errors and changes of S.M.A.R.T. attributes."
+msgstr ""
 
 msgid "Settings"
 msgstr "Beállítások"
@@ -3507,12 +3509,14 @@ msgid "This field should be a list of domain names or IP addresses"
 msgstr "Ennek a mezőnek egy tartománynév listának vagy egy IP címnek kell lennie"
 
 msgid ""
-"This field should be a list of domain names or IP addresses seperated by <,>"
+"This field should be a list of domain names or IP addresses separated by <,>"
 " or <;>"
-msgstr "Ennek a mezőnek egy tartománynév listának vagy egy IP címnek kell lennie <,> vagy <;> -vel elválasztva."
+msgstr ""
 
-msgid "This field should be a list of host names or IP addresses"
-msgstr "Ennek a mezőnek hosztnév listának vagy egy IP címnek kell lennie"
+msgid ""
+"This field should be a list of host names or IP addresses separated by <,> "
+"or <;>"
+msgstr ""
 
 msgid ""
 "This field should be a netmask within the range 128.0.0.0 - 255.255.255.252"
@@ -3549,15 +3553,15 @@ msgstr "Ennek a mezőnek egy IPv6 hálózati címnek (/maszkkal ellátva), egy I
 msgid "This field should only contain numbers"
 msgstr "Ez a mező csak számokat tartalmazhat"
 
-msgid "This field should only contain numbers seperated by <,> or <;>"
-msgstr "Ez a mező csak <,> vagy <;> -vel elválasztott számokat tartalmazhat"
+msgid "This field should only contain numbers separated by <,> or <;>"
+msgstr ""
 
 msgid ""
-"This field should only contain ports (0 - 65535) seperated by <,> or <;>"
-msgstr "Ennek a mezőnek csak portokat szabad tartalmaznia (0 - 65535) <,> vagy <;>-vel elválasztva."
+"This field should only contain ports (0 - 65535) separated by <,> or <;>"
+msgstr ""
 
-msgid "This field should only contain strings seperated by <,> or <;>"
-msgstr "Ennek a mezőnek csak szöveget szabad tartalmaznia <,> vagy <;>-vel elválasztva."
+msgid "This field should only contain strings separated by <,> or <;>"
+msgstr ""
 
 msgid "This function is effective only if the hard drive supports it."
 msgstr "Ez a funkció csak akkor hatékony, ha a merevlemez támogatja."
