--- a/deb/openmediavault/usr/share/openmediavault/locale/no_NO/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/no_NO/openmediavault.po
@@ -9,8 +9,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-08-11 22:31+0200\n"
-"PO-Revision-Date: 2015-07-20 19:19+0000\n"
+"POT-Creation-Date: 2016-01-07 22:30+0100\n"
+"PO-Revision-Date: 2016-01-07 21:30+0000\n"
 "Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: Norwegian (http://www.transifex.com/votdev/openmediavault/language/no/)\n"
 "MIME-Version: 1.0\n"
@@ -2996,8 +2996,10 @@ msgstr "Sett destinasjonsrettighetene til å være de samme som kilderettigheten
 msgid "Set write only"
 msgstr "Sett kun skrivbar"
 
-msgid "Sets the interval between disk checks to N seconds."
-msgstr "Setter tidsintervallet mellom diskkontroll til N sekunder."
+msgid ""
+"Sets the interval between disk checks to N seconds, logging S.M.A.R.T. "
+"errors and changes of S.M.A.R.T. attributes."
+msgstr ""
 
 msgid "Settings"
 msgstr "Instillinger"
@@ -3507,11 +3509,13 @@ msgid "This field should be a list of domain names or IP addresses"
 msgstr ""
 
 msgid ""
-"This field should be a list of domain names or IP addresses seperated by <,>"
+"This field should be a list of domain names or IP addresses separated by <,>"
 " or <;>"
 msgstr ""
 
-msgid "This field should be a list of host names or IP addresses"
+msgid ""
+"This field should be a list of host names or IP addresses separated by <,> "
+"or <;>"
 msgstr ""
 
 msgid ""
@@ -3549,15 +3553,15 @@ msgstr "Dette feltet burde være enten en IPv6 nettverksadresse (med /mask), en 
 msgid "This field should only contain numbers"
 msgstr "Dette feltet skal kun inneholde tall"
 
-msgid "This field should only contain numbers seperated by <,> or <;>"
-msgstr "Dette feltet skal kun inneholde tall adskilt med <,> or <;>"
+msgid "This field should only contain numbers separated by <,> or <;>"
+msgstr ""
 
 msgid ""
-"This field should only contain ports (0 - 65535) seperated by <,> or <;>"
-msgstr "Dette feltet skal kun inneholde porter (0 - 65535) adskilt med <,> eller <;>"
+"This field should only contain ports (0 - 65535) separated by <,> or <;>"
+msgstr ""
 
-msgid "This field should only contain strings seperated by <,> or <;>"
-msgstr "Dette feltet skal kun inneholde strenger adskilt av <,> eller <;>"
+msgid "This field should only contain strings separated by <,> or <;>"
+msgstr ""
 
 msgid "This function is effective only if the hard drive supports it."
 msgstr "Denne funksjonen fungerer bare hvis harddisken støtter det."
