--- a/deb/openmediavault/usr/share/openmediavault/locale/pt_PT/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/pt_PT/openmediavault.po
@@ -9,8 +9,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-08-11 22:31+0200\n"
-"PO-Revision-Date: 2015-07-20 19:19+0000\n"
+"POT-Creation-Date: 2016-01-07 22:30+0100\n"
+"PO-Revision-Date: 2016-01-07 21:30+0000\n"
 "Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: Portuguese (Portugal) (http://www.transifex.com/votdev/openmediavault/language/pt_PT/)\n"
 "MIME-Version: 1.0\n"
@@ -2996,8 +2996,10 @@ msgstr "Definir as permissões de destino para serem as mesmas que as de origem"
 msgid "Set write only"
 msgstr "Definir apenas leitura"
 
-msgid "Sets the interval between disk checks to N seconds."
-msgstr "Definir o intervalo entre verificações de disco em N segundos."
+msgid ""
+"Sets the interval between disk checks to N seconds, logging S.M.A.R.T. "
+"errors and changes of S.M.A.R.T. attributes."
+msgstr ""
 
 msgid "Settings"
 msgstr "Definições"
@@ -3507,12 +3509,14 @@ msgid "This field should be a list of domain names or IP addresses"
 msgstr "Este campo deve ser uma lista de nomes do domínio ou endereços IP"
 
 msgid ""
-"This field should be a list of domain names or IP addresses seperated by <,>"
+"This field should be a list of domain names or IP addresses separated by <,>"
 " or <;>"
-msgstr "Este campo deve ser uma lista de nomes do domínio ou endereços IP separados por <,> ou <;>"
+msgstr ""
 
-msgid "This field should be a list of host names or IP addresses"
-msgstr "Este campo deve ser uma lista de nomes de host ou endereços IP"
+msgid ""
+"This field should be a list of host names or IP addresses separated by <,> "
+"or <;>"
+msgstr ""
 
 msgid ""
 "This field should be a netmask within the range 128.0.0.0 - 255.255.255.252"
@@ -3549,15 +3553,15 @@ msgstr "Este campo deve ser um endereço IPv6 da rede (com máscara), uma gama I
 msgid "This field should only contain numbers"
 msgstr "Este campo deve conter apenas números"
 
-msgid "This field should only contain numbers seperated by <,> or <;>"
-msgstr "Este campo deve conter números separados por <,> ou <;>"
+msgid "This field should only contain numbers separated by <,> or <;>"
+msgstr ""
 
 msgid ""
-"This field should only contain ports (0 - 65535) seperated by <,> or <;>"
-msgstr "Este campo deve conter apenas as portas (0 - 65535) separados por <,> ou <,>"
+"This field should only contain ports (0 - 65535) separated by <,> or <;>"
+msgstr ""
 
-msgid "This field should only contain strings seperated by <,> or <;>"
-msgstr "Este campo deve conter apenas sequências separadas por <,> ou <,>"
+msgid "This field should only contain strings separated by <,> or <;>"
+msgstr ""
 
 msgid "This function is effective only if the hard drive supports it."
 msgstr "Esta função é efetiva apenas se o disco a suportar."
