--- a/deb/openmediavault/usr/share/openmediavault/locale/da_DA/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/da_DA/openmediavault.po
@@ -8,9 +8,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-08-11 22:31+0200\n"
-"PO-Revision-Date: 2015-08-28 09:27+0000\n"
-"Last-Translator: Stefan Thrane Overby <stoverby@gmail.com>\n"
+"POT-Creation-Date: 2016-01-07 22:30+0100\n"
+"PO-Revision-Date: 2016-01-07 21:30+0000\n"
+"Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: Danish (http://www.transifex.com/votdev/openmediavault/language/da/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2995,8 +2995,10 @@ msgstr "Sæt destination tilladelser til at være de samme som kilde tilladelser
 msgid "Set write only"
 msgstr "Sæt kun skrivning"
 
-msgid "Sets the interval between disk checks to N seconds."
-msgstr "Indstiller intervallet mellem disk kontrol til N sekunder."
+msgid ""
+"Sets the interval between disk checks to N seconds, logging S.M.A.R.T. "
+"errors and changes of S.M.A.R.T. attributes."
+msgstr ""
 
 msgid "Settings"
 msgstr "Indstillinger"
@@ -3506,12 +3508,14 @@ msgid "This field should be a list of domain names or IP addresses"
 msgstr "Dette felt skal være en liste af domænenavne eller IP adresser"
 
 msgid ""
-"This field should be a list of domain names or IP addresses seperated by <,>"
+"This field should be a list of domain names or IP addresses separated by <,>"
 " or <;>"
-msgstr "Dette felt skal være en liste af domænenavne eller IP adresser adskilt med <,> eller <;>"
+msgstr ""
 
-msgid "This field should be a list of host names or IP addresses"
-msgstr "Dette felt skal være en liste af værtsnavne eller IP adresser"
+msgid ""
+"This field should be a list of host names or IP addresses separated by <,> "
+"or <;>"
+msgstr ""
 
 msgid ""
 "This field should be a netmask within the range 128.0.0.0 - 255.255.255.252"
@@ -3548,15 +3552,15 @@ msgstr "Dette felt skal være enten en IPv6 netværks adresse (med /maske), et I
 msgid "This field should only contain numbers"
 msgstr "Dette felt kan kun indeholde tal"
 
-msgid "This field should only contain numbers seperated by <,> or <;>"
-msgstr "Dette felt kan kun indeholde tal adskilt af <,> eller <;>"
+msgid "This field should only contain numbers separated by <,> or <;>"
+msgstr ""
 
 msgid ""
-"This field should only contain ports (0 - 65535) seperated by <,> or <;>"
-msgstr "Dette felt kan kun indeholde porte (0 - 65535) adskilt af <,> eller <;>"
+"This field should only contain ports (0 - 65535) separated by <,> or <;>"
+msgstr ""
 
-msgid "This field should only contain strings seperated by <,> or <;>"
-msgstr "Dette felt kan kun indeholde strenge adskilt af <,> eller <;>"
+msgid "This field should only contain strings separated by <,> or <;>"
+msgstr ""
 
 msgid "This function is effective only if the hard drive supports it."
 msgstr "Denne funktion er kun effektiv hvis harddisken understøtter det."
