--- a/deb/openmediavault/usr/share/openmediavault/locale/es_ES/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/es_ES/openmediavault.po
@@ -11,9 +11,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-08-11 22:31+0200\n"
-"PO-Revision-Date: 2015-07-23 06:04+0000\n"
-"Last-Translator: Raul Fernandez Garcia <raulfg3@gmail.com>\n"
+"POT-Creation-Date: 2016-01-07 22:30+0100\n"
+"PO-Revision-Date: 2016-01-07 21:30+0000\n"
+"Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: Spanish (Spain) (http://www.transifex.com/votdev/openmediavault/language/es_ES/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2998,8 +2998,10 @@ msgstr "Establecer los permisos del destino como los permisos del origen"
 msgid "Set write only"
 msgstr "Establecer Solo Escritura"
 
-msgid "Sets the interval between disk checks to N seconds."
-msgstr "Establecer el intervalo entre comprobaciones de disco en N segundos."
+msgid ""
+"Sets the interval between disk checks to N seconds, logging S.M.A.R.T. "
+"errors and changes of S.M.A.R.T. attributes."
+msgstr ""
 
 msgid "Settings"
 msgstr "Configuración"
@@ -3509,12 +3511,14 @@ msgid "This field should be a list of domain names or IP addresses"
 msgstr "El campo debe ser una lista de dominios o de direcciones IP"
 
 msgid ""
-"This field should be a list of domain names or IP addresses seperated by <,>"
+"This field should be a list of domain names or IP addresses separated by <,>"
 " or <;>"
-msgstr "El campo debe ser una lista de dominios o de direcciones IP separados por <,> o <;>"
+msgstr ""
 
-msgid "This field should be a list of host names or IP addresses"
-msgstr "El campo debe ser una lista de nombres de host o de direcciones IP"
+msgid ""
+"This field should be a list of host names or IP addresses separated by <,> "
+"or <;>"
+msgstr ""
 
 msgid ""
 "This field should be a netmask within the range 128.0.0.0 - 255.255.255.252"
@@ -3551,15 +3555,15 @@ msgstr "Debe ser una dirección IPv6 válida  (incluyendo máscara), un rango IP
 msgid "This field should only contain numbers"
 msgstr "Debe contener solo números"
 
-msgid "This field should only contain numbers seperated by <,> or <;>"
-msgstr "Debe contener solo números separados por <,> o <;>"
+msgid "This field should only contain numbers separated by <,> or <;>"
+msgstr ""
 
 msgid ""
-"This field should only contain ports (0 - 65535) seperated by <,> or <;>"
-msgstr "Debe contener solo puertos (0-65535) separados por <,> o <;>"
+"This field should only contain ports (0 - 65535) separated by <,> or <;>"
+msgstr ""
 
-msgid "This field should only contain strings seperated by <,> or <;>"
-msgstr "Debe contener solo cadenas separadas por <,> o <;>"
+msgid "This field should only contain strings separated by <,> or <;>"
+msgstr ""
 
 msgid "This function is effective only if the hard drive supports it."
 msgstr "Esta opción es efectiva solo si la soporta el dispositivo."
