--- a/deb/openmediavault/usr/share/openmediavault/locale/it_IT/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/it_IT/openmediavault.po
@@ -8,14 +8,14 @@
 # maurorulli <mauro.rulli@gmail.com>, 2012
 # maurorulli <mauro.rulli@gmail.com>, 2012
 # Mario Varelli <mvarelli@biologia.unipi.it>, 2012
-# Paolo Velati <paolo.velati@gmail.com>, 2013-2015
+# Paolo Velati <paolo.velati@gmail.com>, 2013-2016
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-08-11 22:31+0200\n"
-"PO-Revision-Date: 2015-11-06 15:09+0000\n"
-"Last-Translator: Paolo Velati <paolo.velati@gmail.com>\n"
+"POT-Creation-Date: 2016-01-07 22:30+0100\n"
+"PO-Revision-Date: 2016-01-07 21:30+0000\n"
+"Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: Italian (http://www.transifex.com/votdev/openmediavault/language/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -3000,8 +3000,10 @@ msgstr "Imposta i permessi di destinazione uguali a quelli di origine"
 msgid "Set write only"
 msgstr "Imposta come sola scrittura"
 
-msgid "Sets the interval between disk checks to N seconds."
-msgstr "Imposta l'intervallo tra i check del disco a N secondi."
+msgid ""
+"Sets the interval between disk checks to N seconds, logging S.M.A.R.T. "
+"errors and changes of S.M.A.R.T. attributes."
+msgstr ""
 
 msgid "Settings"
 msgstr "Impostazioni"
@@ -3511,12 +3513,14 @@ msgid "This field should be a list of domain names or IP addresses"
 msgstr "Questo campo dovrebbe essere una lista di nomi di dominio o indirizzi IP"
 
 msgid ""
-"This field should be a list of domain names or IP addresses seperated by <,>"
+"This field should be a list of domain names or IP addresses separated by <,>"
 " or <;>"
 msgstr "Questo campo dovrebbe essere una lista di nomi di dominio o indirizzi IP separati da <,> oppure <;>"
 
-msgid "This field should be a list of host names or IP addresses"
-msgstr "Questo campo dovrebbe essere una lista di hostname o indirizzi IP"
+msgid ""
+"This field should be a list of host names or IP addresses separated by <,> "
+"or <;>"
+msgstr "Questo campo dovrebbe essere una lista di hostname o indirizzi IP separati da <,> oppure <;>"
 
 msgid ""
 "This field should be a netmask within the range 128.0.0.0 - 255.255.255.252"
@@ -3553,14 +3557,14 @@ msgstr "Questo campo dovrebbe essere o un indirizzo IPv6 (con /maschera), o un i
 msgid "This field should only contain numbers"
 msgstr "Questo campo dovrebbe solo contenere numeri"
 
-msgid "This field should only contain numbers seperated by <,> or <;>"
+msgid "This field should only contain numbers separated by <,> or <;>"
 msgstr "Questo campo dovrebbe contenere solamente numeri separati da <,> o <;>"
 
 msgid ""
-"This field should only contain ports (0 - 65535) seperated by <,> or <;>"
+"This field should only contain ports (0 - 65535) separated by <,> or <;>"
 msgstr "Questo campo dovrebbe contenere solamente porte (0 - 65535) separate da <,> o <;>"
 
-msgid "This field should only contain strings seperated by <,> or <;>"
+msgid "This field should only contain strings separated by <,> or <;>"
 msgstr "Questo campo dovrebbe contenere solamente stringhe separate da <,> o <;>"
 
 msgid "This function is effective only if the hard drive supports it."
