--- a/deb/openmediavault/usr/share/openmediavault/locale/ja_JP/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/ja_JP/openmediavault.po
@@ -8,9 +8,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-08-11 22:31+0200\n"
-"PO-Revision-Date: 2015-07-21 02:11+0000\n"
-"Last-Translator: Toshihiro Kan <kansuke4649@gmail.com>\n"
+"POT-Creation-Date: 2016-01-07 22:30+0100\n"
+"PO-Revision-Date: 2016-01-07 21:30+0000\n"
+"Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: Japanese (Japan) (http://www.transifex.com/votdev/openmediavault/language/ja_JP/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2995,8 +2995,10 @@ msgstr "元のパーミッションと同じになるように先のパーミッ
 msgid "Set write only"
 msgstr "書き込み専用に設定"
 
-msgid "Sets the interval between disk checks to N seconds."
-msgstr "ディスクチェックの間隔をN秒に設定します。"
+msgid ""
+"Sets the interval between disk checks to N seconds, logging S.M.A.R.T. "
+"errors and changes of S.M.A.R.T. attributes."
+msgstr ""
 
 msgid "Settings"
 msgstr "設定"
@@ -3506,12 +3508,14 @@ msgid "This field should be a list of domain names or IP addresses"
 msgstr "このフィールドはドメイン名かIPアドレスのリストである必要があります"
 
 msgid ""
-"This field should be a list of domain names or IP addresses seperated by <,>"
+"This field should be a list of domain names or IP addresses separated by <,>"
 " or <;>"
-msgstr "このフィールドは<,>または<;>で区切られたドメイン名かIPアドレスのリストである必要があります"
+msgstr ""
 
-msgid "This field should be a list of host names or IP addresses"
-msgstr "このフィールドはホスト名かIPアドレスのリストである必要があります"
+msgid ""
+"This field should be a list of host names or IP addresses separated by <,> "
+"or <;>"
+msgstr ""
 
 msgid ""
 "This field should be a netmask within the range 128.0.0.0 - 255.255.255.252"
@@ -3548,15 +3552,15 @@ msgstr "このフィールドはIPv6ネットワークアドレス（/マスク 
 msgid "This field should only contain numbers"
 msgstr "このフィールドは数字のみである必要があります"
 
-msgid "This field should only contain numbers seperated by <,> or <;>"
-msgstr "このフィールドは<,> または <;>で区切られた数字でなければなりません"
+msgid "This field should only contain numbers separated by <,> or <;>"
+msgstr ""
 
 msgid ""
-"This field should only contain ports (0 - 65535) seperated by <,> or <;>"
-msgstr "このフィールドは<,> または <;>で区切られたポート番号(0 - 65535)でなければなりません"
+"This field should only contain ports (0 - 65535) separated by <,> or <;>"
+msgstr ""
 
-msgid "This field should only contain strings seperated by <,> or <;>"
-msgstr "このフィールドは<,> または <;>で区切られた文字列でなければなりません"
+msgid "This field should only contain strings separated by <,> or <;>"
+msgstr ""
 
 msgid "This function is effective only if the hard drive supports it."
 msgstr "この機能は、ハードドライブがサポートしている場合にのみ有効です。"
