--- a/deb/openmediavault/usr/share/openmediavault/locale/nl_NL/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/nl_NL/openmediavault.po
@@ -11,8 +11,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-08-11 22:31+0200\n"
-"PO-Revision-Date: 2015-07-20 19:19+0000\n"
+"POT-Creation-Date: 2016-01-07 22:30+0100\n"
+"PO-Revision-Date: 2016-01-07 21:30+0000\n"
 "Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: Dutch (Netherlands) (http://www.transifex.com/votdev/openmediavault/language/nl_NL/)\n"
 "MIME-Version: 1.0\n"
@@ -2998,8 +2998,10 @@ msgstr "Rechten van het doel overeenkomstig rechten van de bron"
 msgid "Set write only"
 msgstr "Alleen schrijven aan"
 
-msgid "Sets the interval between disk checks to N seconds."
-msgstr "Stelt de tijd tussen schijfcontroles in op N seconden."
+msgid ""
+"Sets the interval between disk checks to N seconds, logging S.M.A.R.T. "
+"errors and changes of S.M.A.R.T. attributes."
+msgstr ""
 
 msgid "Settings"
 msgstr "Instellingen"
@@ -3509,11 +3511,13 @@ msgid "This field should be a list of domain names or IP addresses"
 msgstr ""
 
 msgid ""
-"This field should be a list of domain names or IP addresses seperated by <,>"
+"This field should be a list of domain names or IP addresses separated by <,>"
 " or <;>"
 msgstr ""
 
-msgid "This field should be a list of host names or IP addresses"
+msgid ""
+"This field should be a list of host names or IP addresses separated by <,> "
+"or <;>"
 msgstr ""
 
 msgid ""
@@ -3551,15 +3555,15 @@ msgstr "Dit veld moet een IPv6-adres (met /masker), een IPv6-reeks of een gewoon
 msgid "This field should only contain numbers"
 msgstr "Dit veld mag alleen getallen bevatten"
 
-msgid "This field should only contain numbers seperated by <,> or <;>"
-msgstr "Dit veld mag alleen getallen bevatten gescheiden door een <,> of een <;>"
+msgid "This field should only contain numbers separated by <,> or <;>"
+msgstr ""
 
 msgid ""
-"This field should only contain ports (0 - 65535) seperated by <,> or <;>"
-msgstr "Dit veld mag alleen poortnummers (0-65535) bevatten gescheiden door een <,> of een <;>"
+"This field should only contain ports (0 - 65535) separated by <,> or <;>"
+msgstr ""
 
-msgid "This field should only contain strings seperated by <,> or <;>"
-msgstr "Dit veld mag alleen tekenreeksen bevatten gescheiden door een <,> of een <;>"
+msgid "This field should only contain strings separated by <,> or <;>"
+msgstr ""
 
 msgid "This function is effective only if the hard drive supports it."
 msgstr "Deze functie is enkel werkzaam als de harde schijf het ondersteunt."
