--- a/deb/openmediavault/usr/share/openmediavault/locale/pl_PL/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/pl_PL/openmediavault.po
@@ -12,9 +12,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-08-11 22:31+0200\n"
-"PO-Revision-Date: 2015-09-03 08:31+0000\n"
-"Last-Translator: Cyryl Sochacki <cyrylsochacki@gmail.com>\n"
+"POT-Creation-Date: 2016-01-07 22:30+0100\n"
+"PO-Revision-Date: 2016-01-07 21:30+0000\n"
+"Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: Polish (Poland) (http://www.transifex.com/votdev/openmediavault/language/pl_PL/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2999,8 +2999,10 @@ msgstr "Ustawić uprawnienia przeznaczenia na takie same, jak uprawnienia źród
 msgid "Set write only"
 msgstr "Ustaw tylko do zapisu"
 
-msgid "Sets the interval between disk checks to N seconds."
-msgstr "Ustawia okres między sprawdzaniem dysku na N sekund."
+msgid ""
+"Sets the interval between disk checks to N seconds, logging S.M.A.R.T. "
+"errors and changes of S.M.A.R.T. attributes."
+msgstr ""
 
 msgid "Settings"
 msgstr "Konfiguracja"
@@ -3510,11 +3512,13 @@ msgid "This field should be a list of domain names or IP addresses"
 msgstr ""
 
 msgid ""
-"This field should be a list of domain names or IP addresses seperated by <,>"
+"This field should be a list of domain names or IP addresses separated by <,>"
 " or <;>"
 msgstr ""
 
-msgid "This field should be a list of host names or IP addresses"
+msgid ""
+"This field should be a list of host names or IP addresses separated by <,> "
+"or <;>"
 msgstr ""
 
 msgid ""
@@ -3552,15 +3556,15 @@ msgstr "To pole powinno mieć adresu sieci IPv6 (z /maską), zakres IPv6 lub zwy
 msgid "This field should only contain numbers"
 msgstr "To pole powinno zawierać wyłącznie cyfry"
 
-msgid "This field should only contain numbers seperated by <,> or <;>"
-msgstr "To pole powinno zawierać cyfry oddzielone przez <,> or <;>"
+msgid "This field should only contain numbers separated by <,> or <;>"
+msgstr ""
 
 msgid ""
-"This field should only contain ports (0 - 65535) seperated by <,> or <;>"
-msgstr "To pole powinno zawierać wyłącznie porty (0-65535) oddzielone przez <,> or <;>"
+"This field should only contain ports (0 - 65535) separated by <,> or <;>"
+msgstr ""
 
-msgid "This field should only contain strings seperated by <,> or <;>"
-msgstr "To pole powinno zawierać wyłącznie ciągi oddzielone przez <,> or <;>"
+msgid "This field should only contain strings separated by <,> or <;>"
+msgstr ""
 
 msgid "This function is effective only if the hard drive supports it."
 msgstr "Ta funkcja działa tylko wtedy, jeśli dysk twardy posiada jej obsługę."
