--- a/deb/openmediavault/usr/share/openmediavault/locale/sv_SV/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/sv_SV/openmediavault.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-08-11 22:31+0200\n"
-"PO-Revision-Date: 2015-07-20 19:19+0000\n"
+"POT-Creation-Date: 2016-01-07 22:30+0100\n"
+"PO-Revision-Date: 2016-01-07 21:30+0000\n"
 "Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: Swedish (http://www.transifex.com/votdev/openmediavault/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -2995,8 +2995,10 @@ msgstr "Ange destinationsbehörigheter att bli samma som källbehörigheter"
 msgid "Set write only"
 msgstr "Ange endast skriv"
 
-msgid "Sets the interval between disk checks to N seconds."
-msgstr "Ange intervall mellan enhetskontroller till N sekunder."
+msgid ""
+"Sets the interval between disk checks to N seconds, logging S.M.A.R.T. "
+"errors and changes of S.M.A.R.T. attributes."
+msgstr ""
 
 msgid "Settings"
 msgstr "Inställningar"
@@ -3506,11 +3508,13 @@ msgid "This field should be a list of domain names or IP addresses"
 msgstr ""
 
 msgid ""
-"This field should be a list of domain names or IP addresses seperated by <,>"
+"This field should be a list of domain names or IP addresses separated by <,>"
 " or <;>"
 msgstr ""
 
-msgid "This field should be a list of host names or IP addresses"
+msgid ""
+"This field should be a list of host names or IP addresses separated by <,> "
+"or <;>"
 msgstr ""
 
 msgid ""
@@ -3548,15 +3552,15 @@ msgstr ""
 msgid "This field should only contain numbers"
 msgstr "Detta fält ska endast innehålla siffror"
 
-msgid "This field should only contain numbers seperated by <,> or <;>"
-msgstr "Detta fält ska endast innehålla siffror separerade av <,> eller <;>"
+msgid "This field should only contain numbers separated by <,> or <;>"
+msgstr ""
 
 msgid ""
-"This field should only contain ports (0 - 65535) seperated by <,> or <;>"
-msgstr "Detta fält ska endast innehålla portar (0 - 65535) separerade av <,> eller <;>"
+"This field should only contain ports (0 - 65535) separated by <,> or <;>"
+msgstr ""
 
-msgid "This field should only contain strings seperated by <,> or <;>"
-msgstr "Detta fält ska endast innehålla strängar separerade av <,> eller <;>"
+msgid "This field should only contain strings separated by <,> or <;>"
+msgstr ""
 
 msgid "This function is effective only if the hard drive supports it."
 msgstr "Denna funktion är effektiv bara om hårddisken stöder den."
