--- a/deb/openmediavault/usr/share/openmediavault/locale/tr_TR/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/tr_TR/openmediavault.po
@@ -8,9 +8,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-08-11 22:31+0200\n"
-"PO-Revision-Date: 2015-07-21 20:49+0000\n"
-"Last-Translator: Serhat SUT <serhat.sut@gmail.com>\n"
+"POT-Creation-Date: 2016-01-07 22:30+0100\n"
+"PO-Revision-Date: 2016-01-07 21:30+0000\n"
+"Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: Turkish (Turkey) (http://www.transifex.com/votdev/openmediavault/language/tr_TR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2995,8 +2995,10 @@ msgstr "Hedef yetkilerini kaynak yetkileri ile aynı olacak şekilde ayarla"
 msgid "Set write only"
 msgstr "Sadece yazılabilir ayarla"
 
-msgid "Sets the interval between disk checks to N seconds."
-msgstr "Disk kontrol aralığını N saniye olarak ayarla."
+msgid ""
+"Sets the interval between disk checks to N seconds, logging S.M.A.R.T. "
+"errors and changes of S.M.A.R.T. attributes."
+msgstr ""
 
 msgid "Settings"
 msgstr "Ayarlar"
@@ -3506,12 +3508,14 @@ msgid "This field should be a list of domain names or IP addresses"
 msgstr "Bu alan domain adları ya da IP adresleri listesi olmalıdır"
 
 msgid ""
-"This field should be a list of domain names or IP addresses seperated by <,>"
+"This field should be a list of domain names or IP addresses separated by <,>"
 " or <;>"
-msgstr "Bu alan <,> ya da  <;> ile ayrılmış domain adları ya da IP adresleri listesi olmalıdır"
+msgstr ""
 
-msgid "This field should be a list of host names or IP addresses"
-msgstr "Bu alan sistem adları ya da IP adresleri listesi olmalıdır"
+msgid ""
+"This field should be a list of host names or IP addresses separated by <,> "
+"or <;>"
+msgstr ""
 
 msgid ""
 "This field should be a netmask within the range 128.0.0.0 - 255.255.255.252"
@@ -3548,15 +3552,15 @@ msgstr "Bu alan ya bir IPv6 ağ adresi (/maske ile), bir IPv6 aralığı ya da n
 msgid "This field should only contain numbers"
 msgstr "Bu alan sadece rakam içerebilir"
 
-msgid "This field should only contain numbers seperated by <,> or <;>"
-msgstr "Bu alan sadece <,> veya <;> ile ayrılmış rakam içerebilir"
+msgid "This field should only contain numbers separated by <,> or <;>"
+msgstr ""
 
 msgid ""
-"This field should only contain ports (0 - 65535) seperated by <,> or <;>"
-msgstr "Bu alan sadece <,> veya <;> ile ayrılmış port (0 - 65535) içerebilir"
+"This field should only contain ports (0 - 65535) separated by <,> or <;>"
+msgstr ""
 
-msgid "This field should only contain strings seperated by <,> or <;>"
-msgstr "Bu alan sadece <,> veya <;> ile ayrılmış değer içerebilir"
+msgid "This field should only contain strings separated by <,> or <;>"
+msgstr ""
 
 msgid "This function is effective only if the hard drive supports it."
 msgstr "Bu fonksiyon sadece sabit disk destekliyor ise çalışır."
