--- a/deb/openmediavault/usr/share/openmediavault/locale/uk_UK/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/uk_UK/openmediavault.po
@@ -10,9 +10,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-08-11 22:31+0200\n"
-"PO-Revision-Date: 2015-09-26 12:31+0000\n"
-"Last-Translator: zubr139\n"
+"POT-Creation-Date: 2016-01-07 22:30+0100\n"
+"PO-Revision-Date: 2016-01-07 21:30+0000\n"
+"Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: Ukrainian (http://www.transifex.com/votdev/openmediavault/language/uk/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2997,8 +2997,10 @@ msgstr ""
 msgid "Set write only"
 msgstr "Встановити лише для запису"
 
-msgid "Sets the interval between disk checks to N seconds."
-msgstr "Встановлює інтервал між дисковими перевірками в N секунд."
+msgid ""
+"Sets the interval between disk checks to N seconds, logging S.M.A.R.T. "
+"errors and changes of S.M.A.R.T. attributes."
+msgstr ""
 
 msgid "Settings"
 msgstr "Налаштування"
@@ -3508,11 +3510,13 @@ msgid "This field should be a list of domain names or IP addresses"
 msgstr ""
 
 msgid ""
-"This field should be a list of domain names or IP addresses seperated by <,>"
+"This field should be a list of domain names or IP addresses separated by <,>"
 " or <;>"
 msgstr ""
 
-msgid "This field should be a list of host names or IP addresses"
+msgid ""
+"This field should be a list of host names or IP addresses separated by <,> "
+"or <;>"
 msgstr ""
 
 msgid ""
@@ -3550,14 +3554,14 @@ msgstr ""
 msgid "This field should only contain numbers"
 msgstr "Це поле повинно містити тільки числа"
 
-msgid "This field should only contain numbers seperated by <,> or <;>"
+msgid "This field should only contain numbers separated by <,> or <;>"
 msgstr ""
 
 msgid ""
-"This field should only contain ports (0 - 65535) seperated by <,> or <;>"
+"This field should only contain ports (0 - 65535) separated by <,> or <;>"
 msgstr ""
 
-msgid "This field should only contain strings seperated by <,> or <;>"
+msgid "This field should only contain strings separated by <,> or <;>"
 msgstr ""
 
 msgid "This function is effective only if the hard drive supports it."
