--- a/deb/openmediavault/usr/share/openmediavault/locale/zh_CN/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/zh_CN/openmediavault.po
@@ -9,9 +9,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-08-11 22:31+0200\n"
-"PO-Revision-Date: 2015-10-05 02:36+0000\n"
-"Last-Translator: songming <by@songming.me>\n"
+"POT-Creation-Date: 2016-01-07 22:30+0100\n"
+"PO-Revision-Date: 2016-01-07 21:30+0000\n"
+"Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: Chinese (China) (http://www.transifex.com/votdev/openmediavault/language/zh_CN/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2996,8 +2996,10 @@ msgstr "将目标权限与源权限设为一样"
 msgid "Set write only"
 msgstr "设为只写"
 
-msgid "Sets the interval between disk checks to N seconds."
-msgstr "设定磁盘检查间隔时间为 N 秒"
+msgid ""
+"Sets the interval between disk checks to N seconds, logging S.M.A.R.T. "
+"errors and changes of S.M.A.R.T. attributes."
+msgstr ""
 
 msgid "Settings"
 msgstr "设置"
@@ -3507,12 +3509,14 @@ msgid "This field should be a list of domain names or IP addresses"
 msgstr "此处应该是域名或者IP地址列表"
 
 msgid ""
-"This field should be a list of domain names or IP addresses seperated by <,>"
+"This field should be a list of domain names or IP addresses separated by <,>"
 " or <;>"
-msgstr "此处应该是域名或者IP地址列表，使用<,> 或 <;>隔开。"
+msgstr ""
 
-msgid "This field should be a list of host names or IP addresses"
-msgstr "此处应该是一主机名或者IP地址列表"
+msgid ""
+"This field should be a list of host names or IP addresses separated by <,> "
+"or <;>"
+msgstr ""
 
 msgid ""
 "This field should be a netmask within the range 128.0.0.0 - 255.255.255.252"
@@ -3549,15 +3553,15 @@ msgstr "此处应该是IPv6地址(包含/子网掩码) 、IPv6范围或单个IPv
 msgid "This field should only contain numbers"
 msgstr "此处只能包含数字"
 
-msgid "This field should only contain numbers seperated by <,> or <;>"
-msgstr "此处只能包含以<,>或<;>分割的数字"
+msgid "This field should only contain numbers separated by <,> or <;>"
+msgstr ""
 
 msgid ""
-"This field should only contain ports (0 - 65535) seperated by <,> or <;>"
-msgstr "此处只能包含以<,>或<;>分割的端口(0 - 65535)"
+"This field should only contain ports (0 - 65535) separated by <,> or <;>"
+msgstr ""
 
-msgid "This field should only contain strings seperated by <,> or <;>"
-msgstr "此处只能包含以<,>或<;>分割的字符串"
+msgid "This field should only contain strings separated by <,> or <;>"
+msgstr ""
 
 msgid "This function is effective only if the hard drive supports it."
 msgstr "如果磁盘支持此功能才有效。"
