--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,6 +1,7 @@
 openmediavault (3.0.5) stable; urgency=low
 
   * Various improvements.
+  * Add support for additional notification sinks.
   * Mantis 0000870: Option to add more than one NTP server.
   * Mantis 0001433: SMART settings description vague.
 
